[gd_scene load_steps=2 format=3 uid="uid://b6grk8h2v76ry"]

[ext_resource type="Script" uid="uid://do8ct3i3xumx2" path="res://scripts/Main.gd" id="1_elqb8"]

[node name="Main" type="Node"]
script = ExtResource("1_elqb8")

[node name="GameScene" type="Node2D" parent="."]
process_mode = 1

[node name="UILayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="HUD" type="Control" parent="UILayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ShopPanel" type="Control" parent="UILayer"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SettingsPanel" type="Control" parent="UILayer"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ModalOverlay" type="ColorRect" parent="UILayer"]
process_mode = 3
visible = false
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0.5)

[node name="AudioBusHelper" type="Node" parent="."]
